started building article form : there is a layout issue

--- a/src/assets/scss/item-info.scss
+++ b/src/assets/scss/item-info.scss
@@ -1,19 +1,27 @@
-.item.inf0{
+.item-info{
+    color: white;
     display: flex;
     align-items: center;
-    gap: 1em;
+    gap: .5em;
 
     .img-container{
         img{
-            width: 50px;
-            height: 50px;
+            width: 25px;
+            height: 25px;
             border-radius: 50%;
         }
     }
 
     .info-container{
         p{
+            font-size: 12px;
+            color: #666;
+            text-align: left;
             margin: 0;
+        }
+
+        .date{
+            font-size: 10px;
         }
     }
 }
